--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,13 @@
         <script src="/static/logic.jss"></script>
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="/">home</a>
+            <a href="publications">publications</a>
+            <a href="code">code</a>
+            <a href="cv">cv</a>
+            <a href="gallery">photography</a>
+        </div>
         <div>
             {% block content %} {% endblock %}
         </div>
