--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="/">home</a>
+            <a href="/">home</a>
             <a href="publications">publications</a>
             <a href="code">code</a>
             <a href="cv">cv</a>
