--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, inital-scale=1"/>
         <link rel="stylesheet" href="/static/style.css"/>
-        <script src="/static/logic.jss"></script>
+        <script src="/static/logic.js"></script>
     </head>
     <body>
         <div class="topnav">
