--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ span{
   line-height: 1.75;
 }
 body{
-    background-color:darkslategrey;
+    background-color:#FFFDE7;
 }
 .blueText{
     color: blue
