edited all pages

--- a/templates/code.html
+++ b/templates/code.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}{% block content%}
 
-<h1>This is the code page.</h1>
+<h1>my code.</h1>
+
+<p>most of my experience is in developing radiation hydrodynamics codes, both in the eulerian and lagrangian reference frame. these codes, written in FORTRAN and C are designed to run on hpc machines, exploiting parallelism with the openmpi and mpich libraries.</p>
 
 {% endblock %}
