--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}{% block content%}
 
-<h1>Hello, world!</h1>
+<h1>hello, world!</h1>
+
+<p>i'm dan.</p>
+
+<p>i'm a postdoctoral researcher, currently working at eth z&uuml;rich in z&uuml;rich, ch.</p>
+
+<p>i'm passionate about the natrual world, learning, and being creative.</p>
+
+<p>currently, i am on the job market looking for roles where my skills as a researcher, scientist, and programmer can make a difference.</p>
+
+
+
 
 {% endblock %}
