--- a/templates/publications.html
+++ b/templates/publications.html
@@ -1,5 +1,33 @@
 {% extends "base.html" %}{% block content%}
 
-<h1>This is the publications page.</h1>
+<h1>my science.</h1>
+
+<p>below is a list of peer-reviewed articles on which i have been an author.</p>
+
+<h2>2024</h2>
+
+<p>an implicit algorithm for simulating the dyanmics of small dust grains with smoothed particle hydrodynamics<br>
+elsender &amp; bate<br>
+<a href="https://arxiv.org/abs/2403.05345" target="_blank" rel="noopener noreferrer">arxiv</a> | <a href="https://doi.org/10.1093/mnras/stae722 " target="_blank" rel="noopener noreferrer">publisher</a>
+</p>
+
+<p>probing initial distributions of orbital eccentricity and disc misalignment via polar discs<br>
+ceppi, cuello, lodato, longarini, price, elsender &amp; bate<br>
+<a href="https://arxiv.org/abs/2401.03767" target="_blank" rel="noopener noreferrer">arxiv</a> | <a href="https://doi.org/10.1051/0004-6361/202348375" target="_blank" rel="noopener noreferrer">publisher</a>
+</p>
+
+<h2>2023</h2>
+
+<p>on the frequencies of circumbinary discs in protostellar systems<br>
+elsender, bate, lakeland, jensen &amp; lubow<br>
+<a href="https://arXiv.org/abs/2306.06035" target="_blank" rel="noopener noreferrer">arxiv</a> | <a href="https://doi.org/10.1093/mnras/stad1695" target="_blank" rel="noopener noreferrer">publisher</a>
+</p>
+
+<h2>2021</h2>
+
+<p>the statistical properties of protostellar discs and their dependence on metallicity<br>
+elsender &amp; bate<br>
+<a href="https://arXiv.org/abs/2110.05501" target="_blank" rel="noopener noreferrer">arxiv</a> | <a href="https://doi.org/10.1093/mnras/stab2901" target="_blank" rel="noopener noreferrer">publisher</a>
+</p>
 
 {% endblock %}
