--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,10 @@ h1{
     font-weight: bold;
     
 }
+h2{
+    color: black;
+    font-weight: bold;
+}
 span{
   display: inline;
   background-color: #ddd;
@@ -14,6 +18,7 @@ span{
 }
 body{
     background-color:#FFFDE7;
+    max-width: 75%;
 }
 .blueText{
     color: blue
@@ -37,12 +42,12 @@ body{
 }
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #FFFDE7;
   }
   
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
