--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,32 @@
         <meta name="viewport" content="width=device-width, inital-scale=1"/>
         <link rel="stylesheet" href="/static/style.css"/>
         <script src="/static/logic.js"></script>
+        <script>
+            MathJax = {
+              tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+              }
+            };
+            </script>
+        <script>
+            MathJax = {
+                tex: {
+                  tags: 'ams'
+                }
+              };
+        </script>
+        <script id="MathJax-script" async 
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+        </script>
     </head>
     <body>
         <div class="topnav">
             <a href="/">home</a>
-            <a href="publications">publications</a>
-            <a href="code">code</a>
-            <a href="cv">cv</a>
-            <a href="gallery">photography</a>
+            <a href="/publications">publications</a>
+            <a href="/code">code</a>
+            <a href="/cv">cv</a>
+            <a href="/gallery">photography</a>
+            <a href="/resources">resources</a>
         </div>
         <div>
             {% block content %} {% endblock %}
