--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@ h2{
     color: black;
     font-weight: bold;
 }
+h3{
+    color: black;
+    font-weight: bold;
+}
 span{
   display: inline;
   background-color: #ddd;
