reset to fastapi version

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,12 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="homepage.html">home</a>
-            <a href="publications.html">publications</a>
-            <a href="code.html">code</a>
-            <a href="cv.html">cv</a>
-            <a href="gallery.html">photography</a>
-            <a href="resources.html">resources</a>
+            <a href="/">home</a>
+            <a href="/publications">publications</a>
+            <a href="/code">code</a>
+            <a href="/cv">cv</a>
+            <a href="/gallery">photography</a>
+            <a href="/resources">resources</a>
         </div>
         <div>
             {% block content %} {% endblock %}
