--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
   
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
