--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <a href="/publications">publications</a>
             <a href="/code">code</a>
             <a href="/cv">cv</a>
-            <a href="/gallery">photography</a>
+            <a href="/gallery">gallery</a>
             <a href="/resources">resources</a>
         </div>
         <div>
