--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
 }
 #gallery {
   line-height:0;
-  -webkit-column-count:3; /* split it into 5 columns */
+  -webkit-column-count:3; /* split it into 3 columns */
   -webkit-column-gap:5px; /* give it a 5px gap between columns */
   -moz-column-count:3;
   -moz-column-gap:5px;
@@ -73,12 +73,12 @@ body{
   width: 100% !important;
   height: auto !important;
   margin-bottom:5px; /* to match column gap */
-  filter: grayscale(100%);
-  transition: filter 0.5s;
+  filter: none;
+  /* transition: filter 0.5s; */
 }
-#gallery img:hover {
+/* #gallery img:hover {
   filter:none;
-}
+} */
 @media (max-width: 1200px) {
   #gallery {
    -moz-column-count:    4;
